lustre/ptlrpc/niobuf.c
@@ -104,12 +104,15 @@ static int ptl_send_buf(struct lnet_handle_md *mdh, void *base, int len,
 	RETURN (0);
 }
 
-static void mdunlink_iterate_helper(struct lnet_handle_md *bd_mds, int count)
+#define mdunlink_iterate_helper(mds, count) \
+		__mdunlink_iterate_helper(mds, count, false) 
+static void __mdunlink_iterate_helper(struct lnet_handle_md *bd_mds,
+				      int count, bool discard)
 {
 	int i;
 
 	for (i = 0; i < count; i++)
-		LNetMDUnlink(bd_mds[i]);
+		__LNetMDUnlink(bd_mds[i], discard);
 }
 
 #ifdef HAVE_SERVER_SUPPORT
@@ -285,7 +288,7 @@ void ptlrpc_abort_bulk(struct ptlrpc_bulk_desc *desc)
 	 * but we must still wait_event_idle_timeout() in this case, to give
 	 * us a chance to run server_bulk_callback()
 	 */
-	mdunlink_iterate_helper(desc->bd_mds, desc->bd_md_max_brw);
+	__mdunlink_iterate_helper(desc->bd_mds, desc->bd_md_max_brw, true);
 
 	for (;;) {
 		/* Network access will complete in finite time but the HUGE
